# starn

./: .gitignore  Dockerfile  README.md  docker-compose.yml
server/: Cargo.toml  README.md
server/conf/: Rocket.toml  log.toml  mongo.toml  rocket.toml
server/docs/: mongo.md
server/src/: main.rs
server/src/auth/: mod.rs  role.rs  user.rs
server/src/data/: mod.rs  mongo.rs
server/src/page/: catcher.rs  failure.rs  mod.rs  resp.rs  success.rs  user.rs
server/src/user/: mod.rs
server/src/util/: auth.rs  cookie.rs  log.rs  mod.rs  request.rs
website/: package-lock.json  package.json
