[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
figment = "0.10.10"
log4rs = "1.2.0"
md5 = "0.7.0"
rocket = {version = "=0.5.0-rc.3", features = ["json"] }
serde = "1.0.171"
serde_json = "1.0.102"
